@@ -1,3 +1,8 @@
+2007-11-22  Donal K. Fellows  <donal.k.fellows@man.ac.uk>
+
+	* tests/string.test (string-12.22): Flag shimmering bug found in
+	[string range].
+
 2007-11-21  Donal K. Fellows  <dkf@users.sf.net>
 
 	* generic/tclCompCmds.c (TclCompileEnsemble): Rewrote the ensemble
